bdr.BDR.scala.error
Erreur de compilation :
BDR:3: error: identifier expected but string literal found.
  if (litMessage():String=="R") {
                           ^BDR:41: error: ')' expected but '}' found.
} 
^